[gd_scene load_steps=5 format=3 uid="uid://b70bjp4ag2bdo"]

[ext_resource type="Script" uid="uid://h6vrsk3u4smc" path="res://Scripts/Objetos/explosivo.gd" id="1_70ugp"]
[ext_resource type="Texture2D" uid="uid://dfwko0hgjqi1x" path="res://Sprites/Entes/d_sombraselect_strip2.png" id="2_sm1i7"]
[ext_resource type="Texture2D" uid="uid://dd0nvr88qpjmr" path="res://Sprites/Entes/d_secundaria_strip3.png" id="3_sm1i7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2i47v"]
radius = 17.1172

[node name="Explosivo" type="Area2D" groups=["explosivos"]]
collision_layer = 16
collision_mask = 72
monitorable = false
script = ExtResource("1_70ugp")
metadata/_edit_lock_ = true

[node name="Coli" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_2i47v")
metadata/_edit_lock_ = true

[node name="RayEntes" type="RayCast2D" parent="."]
enabled = false
exclude_parent = false
target_position = Vector2(100, 0)
collision_mask = 6
metadata/_edit_lock_ = true

[node name="Sombra" type="Sprite2D" parent="."]
position = Vector2(0, 7)
texture = ExtResource("2_sm1i7")
hframes = 2
metadata/_edit_lock_ = true

[node name="Imagen" type="Sprite2D" parent="."]
position = Vector2(0, -100)
texture = ExtResource("3_sm1i7")
offset = Vector2(5, -20)
hframes = 3
metadata/_edit_lock_ = true

[node name="TimFin" type="Timer" parent="."]
wait_time = 30.0
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
